Supernova/Samples/Errors/DataExpr1.nova
Application title = Error.

I want window and window title from [x.
